--- a/for Practice/DataScienceBook_DS/Numpy_Ufunc.ipynb
+++ b/for Practice/DataScienceBook_DS/Numpy_Ufunc.ipynb
@@ -934,6 +934,476 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 비교연산 (Comparison Operators)\n",
+    "\n",
+    "- \"==\", \"!=\", \"> or <=\", \"> or <=\"\n",
+    "- np.isclose # 배열 두 개가 z*1e+02% 내외로 가까우면 T, 아니면 F\n",
+    "- np.isinf # 배열이 inf 이면 T, 아니면 F\n",
+    "- np.isfinite # 배열이 inf이면 F, 아니면 T\n",
+    "- np.isnan # 배열이 NaN이면 T, 아니면 \n",
+    "- np.count_nonzero(조건) # ex. np.count_nonzero(a1 >5) a1 중에 0이 아닌 애들 중에서, 5이상인 것 ! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 불리언 연산자\n",
+    "- np.bitwise_and\n",
+    "- np.bitwise_or\n",
+    "- np.bitwise_xor\n",
+    "- np.bitwise_not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "[[False False False]\n",
+      " [False False  True]\n",
+      " [ True False False]]\n",
+      "[6 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a2 = np.arange(1,10).reshape(3,3)\n",
+    "print(a2)\n",
+    "\n",
+    "print((a2>5) & (a2<8)) # 이건 불리언 인덱싱\n",
+    "print(a2[(a2>5) & (a2<8)]) # 이건 [] 니까 노노 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 배열 졍렬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6 2 3 3 9 2 6 9 5 1] \n",
+      "\n",
+      "[1 2 2 3 3 5 6 6 9 9] \n",
+      "\n",
+      "[9 1 5 2 3 8 0 6 4 7] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1 = np.random.randint(1, 10, size =10)\n",
+    "print(a1, \"\\n\")\n",
+    "print(np.sort(a1), \"\\n\") # 정렬\n",
+    "print(np.argsort(a1), \"\\n\") # 정렬된 인덱스 위치값만 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8 9 6]\n",
+      " [1 9 6]\n",
+      " [5 8 5]] \n",
+      "\n",
+      "[[1 8 5]\n",
+      " [5 9 6]\n",
+      " [8 9 6]] \n",
+      "\n",
+      "[[6 8 9]\n",
+      " [1 6 9]\n",
+      " [5 5 8]] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "a2 = np.random.randint(1,10,size=(3,3))\n",
+    "print(a2,\"\\n\")\n",
+    "print(np.sort(a2, axis=0),\"\\n\") # col 밑으로 이어줌\n",
+    "print(np.sort(a2, axis=1), \"\\n\") # row로 옆으로 sort"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 부분정렬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7 2 8 5 3 1 9 3 8 9]\n",
+      "[1 2 3 3 5 7 9 8 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1 = np.random.randint(1,10, size=10)\n",
+    "print(a1)\n",
+    "print(np.partition(a1,3)) #작은 값 3개 앞으로 빼줘 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8 4 1 6 4]\n",
+      " [8 6 6 9 1]\n",
+      " [9 4 7 4 3]\n",
+      " [8 1 4 1 4]\n",
+      " [7 2 3 5 2]] \n",
+      "\n",
+      "[[8 1 1 1 1]\n",
+      " [7 2 3 4 2]\n",
+      " [8 4 4 5 3]\n",
+      " [8 4 6 6 4]\n",
+      " [9 6 7 9 4]] \n",
+      "\n",
+      "[[1 4 4 6 8]\n",
+      " [1 6 6 8 9]\n",
+      " [4 3 4 7 9]\n",
+      " [1 4 1 4 8]\n",
+      " [2 2 3 5 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a2 = np.random.randint(1,10, size=(5,5)) \n",
+    "print(a2, \"\\n\")\n",
+    "print(np.partition(a2, 3, axis=0), \"\\n\")\n",
+    "print(np.partition(a2, 3, axis=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 배열 입출력\n",
+    "\n",
+    "- np.save() # NumPy 배열 객체 1개를 파일에 저장\n",
+    "- np.savez() # 배열 여러개 저장\n",
+    "- np.load() # 배열 저장 파일로부터 객체 로딩\n",
+    "- np.loadtxt() # 배열 로딩 텍스트 파일로부터\n",
+    "- np.savetxt() # 텍스트로 저장"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 6 7 7 9]\n",
+      " [8 6 4 3 4]\n",
+      " [3 6 5 2 6]\n",
+      " [9 4 6 9 5]\n",
+      " [2 8 9 2 3]] \n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'T' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/minjoonlim/Desktop/python workspace/mjmj/for Practice/DataScienceBook_DS/Numpy_Ufunc.ipynb Cell 41'\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/Numpy_Ufunc.ipynb#ch0000041?line=0'>1</a>\u001b[0m a2 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(\u001b[39m1\u001b[39m,\u001b[39m10\u001b[39m, size\u001b[39m=\u001b[39m(\u001b[39m5\u001b[39m,\u001b[39m5\u001b[39m))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/Numpy_Ufunc.ipynb#ch0000041?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(a2, \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/Numpy_Ufunc.ipynb#ch0000041?line=3'>4</a>\u001b[0m np\u001b[39m.\u001b[39msave(\u001b[39m'\u001b[39m\u001b[39ma\u001b[39m\u001b[39m'\u001b[39m, a2, EncodingWarning\u001b[39m=\u001b[39mT)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'T' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "a2 = np.random.randint(1,10, size=(5,5))\n",
+    "print(a2, \"\\n\")\n",
+    "\n",
+    "np.save('a', a2) # 파일명 a로 a2를 지정, binary 라 machine-readabled임 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 3 4 2 8]\n",
+      " [2 4 5 2 8]\n",
+      " [5 1 3 8 5]\n",
+      " [1 3 7 3 5]\n",
+      " [6 5 5 9 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b2 = np.random.randint(1, 10, size=(5,5))\n",
+    "print(b2)\n",
+    "np.savez(\"ab\", a2, b2) #ab로 a2,b2에 대해 저장해줘"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numpy_Ufunc.ipynb  Numpy_intro.ipynb  a.npy              ab.npz\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6 4 9 7 5]\n",
+      " [7 4 7 3 7]\n",
+      " [6 6 5 7 6]\n",
+      " [2 4 4 9 6]\n",
+      " [6 7 1 8 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "npy = np.load(\"a.npy\")\n",
+    "print(npy) # binary라 못읽어도 출력 제대로 됨 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['arr_0', 'arr_1']\n",
+      "[[2 6 7 7 9]\n",
+      " [8 6 4 3 4]\n",
+      " [3 6 5 2 6]\n",
+      " [9 4 6 9 5]\n",
+      " [2 8 9 2 3]]\n",
+      "[[1 3 4 2 8]\n",
+      " [2 4 5 2 8]\n",
+      " [5 1 3 8 5]\n",
+      " [1 3 7 3 5]\n",
+      " [6 5 5 9 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "npz = np.load(\"ab.npz\") \n",
+    "print(npz.files) # np 안에 여러개 있어서 봐야함 \n",
+    "print(npz['arr_0'])\n",
+    "print(npz['arr_1']) # 요렇게!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 6 7 7 9]\n",
+      " [8 6 4 3 4]\n",
+      " [3 6 5 2 6]\n",
+      " [9 4 6 9 5]\n",
+      " [2 8 9 2 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a2)\n",
+    "np.savetxt(\"a.csv\", a2, delimiter=',')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numpy_Ufunc.ipynb  a.csv              ab.npz\n",
+      "Numpy_intro.ipynb  a.npy\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.000000000000000000e+00,6.000000000000000000e+00,7.000000000000000000e+00,7.000000000000000000e+00,9.000000000000000000e+00\n",
+      "8.000000000000000000e+00,6.000000000000000000e+00,4.000000000000000000e+00,3.000000000000000000e+00,4.000000000000000000e+00\n",
+      "3.000000000000000000e+00,6.000000000000000000e+00,5.000000000000000000e+00,2.000000000000000000e+00,6.000000000000000000e+00\n",
+      "9.000000000000000000e+00,4.000000000000000000e+00,6.000000000000000000e+00,9.000000000000000000e+00,5.000000000000000000e+00\n",
+      "2.000000000000000000e+00,8.000000000000000000e+00,9.000000000000000000e+00,2.000000000000000000e+00,3.000000000000000000e+00\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat a.csv # cat으로 reading 됨 csv는 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2. 6. 7. 7. 9.]\n",
+      " [8. 6. 4. 3. 4.]\n",
+      " [3. 6. 5. 2. 6.]\n",
+      " [9. 4. 6. 9. 5.]\n",
+      " [2. 8. 9. 2. 3.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "csv = np.loadtxt(\"a.csv\", delimiter=',') # delimiter 해야함! (저장/로드 모두)\n",
+    "print(csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 3 4 2 8]\n",
+      " [2 4 5 2 8]\n",
+      " [5 1 3 8 5]\n",
+      " [1 3 7 3 5]\n",
+      " [6 5 5 9 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b2)\n",
+    "np.savetxt(\"b.csv\", b2, delimiter=',', fmt = '%.2e', header='c1, c2, c3, c4, c5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# c1, c2, c3, c4, c5\n",
+      "1.00e+00,3.00e+00,4.00e+00,2.00e+00,8.00e+00\n",
+      "2.00e+00,4.00e+00,5.00e+00,2.00e+00,8.00e+00\n",
+      "5.00e+00,1.00e+00,3.00e+00,8.00e+00,5.00e+00\n",
+      "1.00e+00,3.00e+00,7.00e+00,3.00e+00,5.00e+00\n",
+      "6.00e+00,5.00e+00,5.00e+00,9.00e+00,2.00e+00\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat b.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 3., 4., 2., 8.],\n",
+       "       [2., 4., 5., 2., 8.],\n",
+       "       [5., 1., 3., 8., 5.],\n",
+       "       [1., 3., 7., 3., 5.],\n",
+       "       [6., 5., 5., 9., 2.]])"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.loadtxt(\"b.csv\", delimiter=\",\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
