--- a/for Practice/DataScienceBook_DS/NumPy/Numpy_Ufunc.ipynb
+++ b/for Practice/DataScienceBook_DS/NumPy/Numpy_Ufunc.ipynb
@@ -1402,6 +1402,54 @@
    "source": [
     "np.loadtxt(\"b.csv\", delimiter=\",\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reduce --> 집계 함수\n",
+    "\n",
+    "x = np.array([1,2,3,4,5])\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.add.reduce(x) # 다 더함 \n",
+    "np.multiply.reduce(x) #  다 곱함 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
