--- a/for Practice/DataScienceBook_DS/NumPy/Numpy_Ufunc.ipynb
+++ b/for Practice/DataScienceBook_DS/NumPy/Numpy_Ufunc.ipynb
@@ -1501,6 +1501,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 0, 3, 1, 4])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 선택 정렬; 리스트 최솟값을 반복적으로 찾아서 리스트가 정렬될 때 까지 값을 교환한다.\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def selection_sort(x):\n",
+    "    for i in range(len(x)):\n",
+    "        swap = i + np.argmin(x[i:])\n",
+    "        (x[i], x[swap]) = (x[swap], x[i])\n",
+    "    return x\n",
+    "\n",
+    "x = np.array([2,1,4,3,5])\n",
+    "selection_sort(x)\n",
+    "\n",
+    "# Numpy에서 단순\n",
+    "\n",
+    "x = np.array([2,4,1,3,5])\n",
+    "# x.sort()\n",
+    "# np.sort(x)\n",
+    "np.argsort(x) # index로 반환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6 3 7 4 6 9]\n",
+      " [2 6 7 4 3 7]\n",
+      " [7 2 5 4 1 7]\n",
+      " [5 1 4 0 9 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rand = np.random.RandomState(42)\n",
+    "X = rand.randint(0,10,(4,6))\n",
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype([('name', '<U10'), ('age', '<i4'), ('weight', '<f8')])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dtype({'names':('name','age','weight'),\n",
+    "          'formats': ('U10','i4','f8')})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
