--- a/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
+++ b/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
@@ -62,6 +62,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 행렬의 덧셈"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[3, 11], [7, 3], [8, 6]]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = [[2,7], [3,4], [6,1]]\n",
+    "B = [[1,4], [4,-1], [2,5]]\n",
+    "\n",
+    "n = len(A)\n",
+    "p = len(A[0])\n",
+    "\n",
+    "res = []\n",
+    "\n",
+    "for i in range(0, n):\n",
+    "    row = []\n",
+    "    for j in range(0, p):\n",
+    "        val = A[i][j] + B[i][j]\n",
+    "        row.append(val)\n",
+    "    res.append(row)\n",
+    "    \n",
+    "res"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
