--- a/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
+++ b/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 행렬의 덧셈"
+    "## 행렬의 덧셈 / 뺄셈 / 곱셈 / 나눗셈 (모두 동일)"
    ]
   },
   {
@@ -101,6 +101,45 @@
     "    res.append(row)\n",
     "    \n",
     "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[-4, 2], [5, -4], [2, 8]]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C = [[1,4], [5, -2], [3,5]]\n",
+    "D = [[5,2], [0,2], [1,-3]]   \n",
+    "\"\"\"\n",
+    "C는 [1,4]\n",
+    "   [5,-2]\n",
+    "    [3,5] 인 2 x 3 행렬임 \n",
+    "    \"\"\"\n",
+    "\n",
+    "r = len(C)\n",
+    "c = len(C[0])\n",
+    "res1 = []\n",
+    "    \n",
+    "for i in range(0, r):\n",
+    "    row = []\n",
+    "    for j in range(0,c):\n",
+    "        val = C[i][j] - D[i][j]\n",
+    "        row.append(val) \n",
+    "    res1.append(row)\n",
+    "\n",
+    "res1\n"
    ]
   },
   {
