--- a/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
+++ b/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
@@ -144,6 +144,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[10, 35], [15, 20], [30, 5]]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res2 = []\n",
+    "E = 5\n",
+    "\n",
+    "for i in range (0, r):\n",
+    "    row = []\n",
+    "    for j in range (0, c):\n",
+    "        val = E * A[i][j]\n",
+    "        row.append(val)\n",
+    "    res2.append(row)\n",
+    "\n",
+    "res2\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
