--- a/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
+++ b/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
@@ -144,22 +144,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[10, 35], [15, 20], [30, 5]]"
+       "[[5, 8], [0, -4], [3, -15]]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res2 = []\n",
+    "res2 = [] # 벡터 스칼라 곱 \n",
     "E = 5\n",
     "\n",
     "for i in range (0, r):\n",
@@ -170,7 +170,17 @@
     "    res2.append(row)\n",
     "\n",
     "res2\n",
-    "        "
+    "        \n",
+    "res3 = []\n",
+    "\n",
+    "for i in range (0, r):\n",
+    "    row = []\n",
+    "    for j in range (0, c):\n",
+    "        val = C[i][j] * D[i][j]\n",
+    "        row.append(val)\n",
+    "    res3.append(row)\n",
+    "    \n",
+    "res3"
    ]
   },
   {
