update for test

--- a/for Practice/DataScienceBook_DS/NumPy/4. [연습] 데이터 구간화.ipynb
+++ b/for Practice/DataScienceBook_DS/NumPy/4. [연습] 데이터 구간화.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,10 +40,10 @@
        "        -2.36842105, -1.84210526, -1.31578947, -0.78947368, -0.26315789,\n",
        "         0.26315789,  0.78947368,  1.31578947,  1.84210526,  2.36842105,\n",
        "         2.89473684,  3.42105263,  3.94736842,  4.47368421,  5.        ]),\n",
-       " [<matplotlib.patches.Polygon at 0x11aeed2a0>])"
+       " [<matplotlib.patches.Polygon at 0x1189874c0>])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -63,7 +63,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.hist(x, bins, histtype='step')"
+    "plt.hist(x, bins, histtype='step')\n",
+    "plt.show()"
    ]
   },
   {
