--- a/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
+++ b/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,24 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5, 7, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(w)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,20 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[3, 11], [7, 3], [8, 6]]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = [[2,7], [3,4], [6,1]]\n",
     "B = [[1,4], [4,-1], [2,5]]\n",
@@ -105,20 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[-4, 2], [5, -4], [2, 8]]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "C = [[1,4], [5, -2], [3,5]]\n",
     "D = [[5,2], [0,2], [1,-3]]   \n",
@@ -144,20 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[5, 8], [0, -4], [3, -15]]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "res2 = [] # 벡터 스칼라 곱 \n",
     "E = 5\n",
@@ -192,18 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 3 6]\n",
-      " [5 4 2]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = [[1,5],[3,4],[6,2]]\n",
     "\n",
@@ -238,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,25 +211,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "행렬 A의 2 제곱은 [[5, 2, 4], [2, 5, 3], [4, 3, 6]]\n",
-      "행렬 A의 3 제곱은 [[13, 8, 16], [8, 13, 12], [16, 12, 17]]\n",
-      "행렬 A의 4 제곱은 [[45, 32, 50], [32, 38, 41], [50, 41, 61]]\n",
-      "행렬 A의 5 제곱은 [[145, 114, 172], [114, 117, 143], [172, 143, 202]]\n",
-      "행렬 A의 6 제곱은 [[489, 400, 576], [400, 377, 488], [576, 488, 689]]\n",
-      "행렬 A의 7 제곱은 [[1641, 1376, 1954], [1376, 1242, 1665], [1954, 1665, 2329]]\n",
-      "행렬 A의 8 제곱은 [[5549, 4706, 6612], [4706, 4149, 5659], [6612, 5659, 7902]]\n",
-      "행렬 A의 9 제곱은 [[18773, 16024, 22416], [16024, 13957, 19220], [22416, 19220, 26785]]\n",
-      "행렬 A의 10 제곱은 [[63605, 54464, 75986], [54464, 47134, 65225], [75986, 65225, 90837]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = [[1,0,2],[0,2,1],[2,1,1]]\n",
     "\n",
@@ -292,61 +226,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "행렬 A의 2 제곱은\n",
-      "[[5 2 4]\n",
-      " [2 5 3]\n",
-      " [4 3 6]]\n",
-      "==============\n",
-      "행렬 A의 3 제곱은\n",
-      "[[13  8 16]\n",
-      " [ 8 13 12]\n",
-      " [16 12 17]]\n",
-      "==============\n",
-      "행렬 A의 4 제곱은\n",
-      "[[45 32 50]\n",
-      " [32 38 41]\n",
-      " [50 41 61]]\n",
-      "==============\n",
-      "행렬 A의 5 제곱은\n",
-      "[[145 114 172]\n",
-      " [114 117 143]\n",
-      " [172 143 202]]\n",
-      "==============\n",
-      "행렬 A의 6 제곱은\n",
-      "[[489 400 576]\n",
-      " [400 377 488]\n",
-      " [576 488 689]]\n",
-      "==============\n",
-      "행렬 A의 7 제곱은\n",
-      "[[1641 1376 1954]\n",
-      " [1376 1242 1665]\n",
-      " [1954 1665 2329]]\n",
-      "==============\n",
-      "행렬 A의 8 제곱은\n",
-      "[[5549 4706 6612]\n",
-      " [4706 4149 5659]\n",
-      " [6612 5659 7902]]\n",
-      "==============\n",
-      "행렬 A의 9 제곱은\n",
-      "[[18773 16024 22416]\n",
-      " [16024 13957 19220]\n",
-      " [22416 19220 26785]]\n",
-      "==============\n",
-      "행렬 A의 10 제곱은\n",
-      "[[63605 54464 75986]\n",
-      " [54464 47134 65225]\n",
-      " [75986 65225 90837]]\n",
-      "==============\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "AA = A\n",
     "\n",
@@ -358,12 +240,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## no"
+    "## 대각행렬\n",
+    "대각 성분 제외한 나머지는 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 0, 0]]\n",
+      "[[1, 0, 0], [0, 5, 0]]\n",
+      "[[1, 0, 0], [0, 5, 0], [0, 0, 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [[1,2,3],[4,5,6],[7,8,9]]\n",
+    "\n",
+    "n = len(A)\n",
+    "D = []\n",
+    "\n",
+    "for i in range(0,n):\n",
+    "    row = []\n",
+    "    for j in range(0,n):\n",
+    "        if i == j:\n",
+    "            row.append(A[i][j])\n",
+    "        else:\n",
+    "            row.append(0)\n",
+    "    D.append(row)\n",
+    "    \n",
+    "    "
    ]
   },
   {
