--- a/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
+++ b/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
@@ -282,10 +282,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]] \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0],\n",
+       "       [0, 2, 0],\n",
+       "       [0, 0, 3]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# numpy 이용\n",
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
+    "print(A,\"\\n\")\n",
+    "A_dia = np.diag([1,2,3])\n",
+    "A_dia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  4,  9],\n",
+       "       [ 4, 10, 18],\n",
+       "       [ 7, 16, 27]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AD = np.matmul(A,A_dia)\n",
+    "AD #대각행렬이 뒤이면, col 기준으로 곱"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3],\n",
+       "       [ 8, 10, 12],\n",
+       "       [21, 24, 27]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DA = np.matmul(A_dia, A)\n",
+    "DA # 대각행렬이 앞이면, row 기준 곱 "
+   ]
   },
   {
    "cell_type": "code",
