--- a/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
+++ b/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
@@ -365,6 +365,168 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 단위행렬\n",
+    "주대각이 1이고, 나머지는 모두 0, 기호로 I (Identity matrix)\n",
+    "특정 행렬 A에 대해, AI = IA = A "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 0, 0, 0, 0],\n",
+       " [0, 1, 0, 0, 0],\n",
+       " [0, 0, 1, 0, 0],\n",
+       " [0, 0, 0, 1, 0],\n",
+       " [0, 0, 0, 0, 1]]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def identity (n):\n",
+    "    I = []\n",
+    "    for i in range (0,n):\n",
+    "        row = []\n",
+    "        for j in range (0,n):\n",
+    "            if i == j:\n",
+    "                row.append(1)\n",
+    "            else: \n",
+    "                row.append(0)\n",
+    "        I.append(row)\n",
+    "    \n",
+    "    return I \n",
+    "\n",
+    "identity(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]] \n",
+      "\n",
+      "[[1, 0, 0], [0, 1, 0], [0, 0, 1]] \n",
+      "\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]] \n",
+      "\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
+    "print(A, \"\\n\")\n",
+    "\n",
+    "I = identity(3)\n",
+    "print(I, \"\\n\") \n",
+    "\n",
+    "AI = np.matmul(A,I)\n",
+    "IA = np.matmul(I,A)\n",
+    "\n",
+    "print(AI, \"\\n\")\n",
+    "print(IA, \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 삼각 행렬 (triangular matrix)\n",
+    "구성 원소가 삼각형 형태 - upper triangular matrix, lower triangular matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [0, 5, 6],\n",
+       "       [0, 0, 9]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = [[1,2,3], [4,5,6], [7,8,9]]\n",
+    "\n",
+    "n = len(A) # 3\n",
+    "p = len(A[0]) # 3\n",
+    "\n",
+    "utri = []\n",
+    "\n",
+    "for i in range (0, n):\n",
+    "    row = []\n",
+    "    for j in range (0, p):\n",
+    "        if i > j: # lower triangular 는 i < j 로 하면 됨 \n",
+    "            row.append(0)\n",
+    "        else: \n",
+    "            row.append(A[i][j])\n",
+    "    utri.append(row)\n",
+    "\n",
+    "np.array(utri)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [0 5 6]\n",
+      " [0 0 9]] \n",
+      "\n",
+      "[[1 0 0]\n",
+      " [4 5 0]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 넘파이\n",
+    "\n",
+    "A = np.array([[1,2,3], [4,5,6], [7,8,9]])\n",
+    "\n",
+    "Au = np.triu(A)\n",
+    "Al = np.tril(A)\n",
+    "print(Au, \"\\n\")\n",
+    "print(Al)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
