--- a/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
+++ b/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
@@ -527,6 +527,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 토플리츠 행렬 (Toeplitz matrix)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,0,-2,-4]\n",
+    "b = [1,3,5,7,9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = len(a)\n",
+    "n2 = len(b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  3,  5,  7,  9],\n",
+       "       [ 0,  1,  3,  5,  7],\n",
+       "       [-2,  0,  1,  3,  5],\n",
+       "       [-4, -2,  0,  1,  3]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = []\n",
+    "\n",
+    "for i in range(0, n1):\n",
+    "    row = []\n",
+    "    for j in range (0, n2):\n",
+    "        if i > j:\n",
+    "            row.append(a[i-j])\n",
+    "        else:\n",
+    "            row.append(b[j-i])\n",
+    "    A.append(row)\n",
+    "\n",
+    "np.array(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  3  5  7  9]\n",
+      " [ 0  1  3  5  7]\n",
+      " [-2  0  1  3  5]\n",
+      " [-4 -2  0  1  3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## scipy 사용\n",
+    "\n",
+    "from scipy.linalg import toeplitz\n",
+    "A = toeplitz([1,0,-2,-4],[1,3,5,7,9])\n",
+    "print(A)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
