--- a/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
+++ b/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
@@ -621,6 +621,220 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 이중 대각 행렬 bidiagonal matrix\n",
+    "대각 원소 위/아래 (upper/lower bidiagonal matrix) 성분도 0이 아닌 대각 행렬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = [[1,2,1,3],[5,3,4,1],[2,1,7,9],[2,8,1,3]]\n",
+    "n = len(A)\n",
+    "p = len(A[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 1 3]\n",
+      " [5 3 4 1]\n",
+      " [2 1 7 9]\n",
+      " [2 8 1 3]] \n",
+      "\n",
+      "[[1 2 0 0]\n",
+      " [0 3 4 0]\n",
+      " [0 0 7 9]\n",
+      " [0 0 0 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = []\n",
+    "for i in range (0,n): \n",
+    "    row = []\n",
+    "    for j in range (0,p):\n",
+    "        if i > j or j-i > 1: \n",
+    "            row.append(0)\n",
+    "        else:\n",
+    "            row.append(A[i][j])\n",
+    "    res.append(row)\n",
+    "\n",
+    "print(np.array(A), \"\\n\")\n",
+    "print(np.array(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 7 3] \n",
+      "\n",
+      "[2 4 9]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 2, 0, 0],\n",
+       "       [0, 0, 4, 0],\n",
+       "       [0, 0, 0, 9],\n",
+       "       [0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## numpy\n",
+    "diag_ele = np.diag(A)\n",
+    "print(diag_ele, \"\\n\")\n",
+    "np.diag(diag_ele)\n",
+    "\n",
+    "u_diag_ele = np.diag(A, k=1)\n",
+    "print(u_diag_ele)\n",
+    "\n",
+    "np.diag(u_diag_ele, k=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## householder 행렬 (Householder matrix)\n",
+    "- 어떤 행렬을 다른 형태로 변환할 때 사용하는 행렬 \n",
+    "- 정사각 행렬이며, 모든 열이 정규 직교 (orthonomal) 임\n",
+    "\n",
+    "v = ([v1],\n",
+    "    [v2],\n",
+    "    [v3],\n",
+    "    [v4]]) \n",
+    "    일 때 ,\n",
+    "\n",
+    "H = I - 2 * vvT/vTv  \n",
+    "vvT = 내적\n",
+    "vTv = 외적"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def outer_product(a,b):\n",
+    "    res = []\n",
+    "    n1 = len(a)\n",
+    "    n2 = len(b)\n",
+    "    for i in range(0,n1):\n",
+    "        row =[]\n",
+    "        for j in range (0, n2):\n",
+    "            val = a[i]*b[j]\n",
+    "            row.append(val)\n",
+    "        res.append(row)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inner_product(a,b):\n",
+    "    res = []\n",
+    "    n = len(a)\n",
+    "    res = 0\n",
+    "    for i in range(0,n):\n",
+    "        res += a[i]*b[i]\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def subtract(A,B):\n",
+    "    n = len(A)\n",
+    "    p = len(A[0])\n",
+    "    \n",
+    "    res = []\n",
+    "    for i in range(0,n):\n",
+    "        row = []\n",
+    "        for j in range(0,p):\n",
+    "            val = A[i][j] - B[i][j]\n",
+    "            row.append(val)\n",
+    "        res.append(row)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def householder(v):\n",
+    "    n = len(v)\n",
+    "    outer_mat = outer_product(v,v)\n",
+    "    inner_val = inner_product(v,v)\n",
+    "    V = []\n",
+    "    for i in range(0,n):\n",
+    "        row = []\n",
+    "        for j in range(0, n):\n",
+    "            val = (2/inner_val)*outer_mat[i][j]\n",
+    "            row.append(val)\n",
+    "        V.append(row)\n",
+    "    H = subtract(identity(n),V)\n",
+    "    return H"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.8571428571428572, 0.0, -0.2857142857142857, -0.42857142857142855],\n",
+       " [0.0, 1.0, 0.0, 0.0],\n",
+       " [-0.2857142857142857, 0.0, 0.4285714285714286, -0.8571428571428571],\n",
+       " [-0.42857142857142855, 0.0, -0.8571428571428571, -0.2857142857142856]]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1,0,2,3]\n",
+    "\n",
+    "householder(a)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
