--- a/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
+++ b/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb
@@ -835,6 +835,127 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  선형 시스템 해 구하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원본행렬\n",
+      "[3, 1, 2] 5\n",
+      "[2, 6, -1] 1\n",
+      "[4, 0, -1] 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = [[3,1,2], [2,6,-1], [4,0,-1]]\n",
+    "y = [5,1,3]\n",
+    "\n",
+    "x0 = X[0]\n",
+    "x1 = X[1]\n",
+    "x2 = X[2]\n",
+    "\n",
+    "y0 = y[0]\n",
+    "y1 = y[1]\n",
+    "y2 = y[2]\n",
+    "\n",
+    "print('원본행렬')\n",
+    "print(x0, y0)\n",
+    "print(x1, y1)\n",
+    "print(x2, y2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def solve(A, b):\n",
+    "    X = deepcopy(A)\n",
+    "    sol = deepcopy(b) \n",
+    "    n = len(X)\n",
+    "    \n",
+    "    for i in range(0,n):\n",
+    "        print(\"-----i번째 실행 시작-----\")\n",
+    "        x_row = X[i]\n",
+    "        y_val = sol[i]\n",
+    "        \n",
+    "        if x_row[i] != 0:\n",
+    "            tmp = 1/x_row[i]\n",
+    "        else:\n",
+    "            tmp = 0\n",
+    "        \n",
+    "        x_row = [element*tmp for element in x_row]\n",
+    "        y_val = y_val*tmp\n",
+    "        \n",
+    "        X[i] = x_row\n",
+    "        sol[i] = y_val\n",
+    "        \n",
+    "        print(x_row)\n",
+    "        print(y_val)\n",
+    "        print('-----행 나누기 완료-----')\n",
+    "        \n",
+    "        for j in range(0,n):\n",
+    "            if i == j:\n",
+    "                continue\n",
+    "            print('-----j번째 실행 시작-----')\n",
+    "            x_next = X[j]\n",
+    "            y_next = sol[j]\n",
+    "            x_tmp = [element * -x_next[i] for element in x_row]\n",
+    "            \n",
+    "            y_tmp = y_val*(-x_next[i])\n",
+    "            for k in range(0, len(x_row)):\n",
+    "                x_next[k] = x_tmp[k] + x_next[k]\n",
+    "            y_next = y_tmp + y_next\n",
+    "            \n",
+    "            X[j] = x_next\n",
+    "            sol[j] = y_next\n",
+    "            \n",
+    "            print(X)\n",
+    "            print(sol)\n",
+    "            print('-----j번째 실행 종료-----')\n",
+    "            \n",
+    "        print('i번째 실행 완료')\n",
+    "        \n",
+    "    return sol "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'deepcopy' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/minjoonlim/Desktop/python workspace/mjmj/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb Cell 44'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/%EC%84%A0%ED%98%95%EB%8C%80%EC%88%98_w.Python.ipynb#ch0000044?line=0'>1</a>\u001b[0m solve(X,y)\n",
+      "\u001b[1;32m/Users/minjoonlim/Desktop/python workspace/mjmj/for Practice/DataScienceBook_DS/선형대수_w.Python.ipynb Cell 43'\u001b[0m in \u001b[0;36msolve\u001b[0;34m(A, b)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/%EC%84%A0%ED%98%95%EB%8C%80%EC%88%98_w.Python.ipynb#ch0000043?line=2'>3</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msolve\u001b[39m(A, b):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/%EC%84%A0%ED%98%95%EB%8C%80%EC%88%98_w.Python.ipynb#ch0000043?line=3'>4</a>\u001b[0m     X \u001b[39m=\u001b[39m deepcopy(A)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/%EC%84%A0%ED%98%95%EB%8C%80%EC%88%98_w.Python.ipynb#ch0000043?line=4'>5</a>\u001b[0m     sol \u001b[39m=\u001b[39m deepcopy(b) \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/minjoonlim/Desktop/python%20workspace/mjmj/for%20Practice/DataScienceBook_DS/%EC%84%A0%ED%98%95%EB%8C%80%EC%88%98_w.Python.ipynb#ch0000043?line=5'>6</a>\u001b[0m     n \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(X)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'deepcopy' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "solve(X,y)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
