--- a/for Practice/DataScienceBook_DS/NumPy/4. [연습] 데이터 구간화.ipynb
+++ b/for Practice/DataScienceBook_DS/NumPy/4. [연습] 데이터 구간화.ipynb
@@ -63,8 +63,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.hist(x, bins, histtype='step')\n",
-    "plt.show()"
+    "plt.hist(x, bins, histtype='step')"
    ]
   },
   {
