--- a/for Practice/practice_note.ipynb
+++ b/for Practice/practice_note.ipynb
@@ -61,6 +61,401 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area</th>\n",
+       "      <th>pop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>california</th>\n",
+       "      <td>423967</td>\n",
+       "      <td>38332521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>texas</th>\n",
+       "      <td>695662</td>\n",
+       "      <td>26448193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>new york</th>\n",
+       "      <td>141297</td>\n",
+       "      <td>19651127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Florida</th>\n",
+       "      <td>170312</td>\n",
+       "      <td>19552860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Illinois</th>\n",
+       "      <td>149995</td>\n",
+       "      <td>12882135</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              area       pop\n",
+       "california  423967  38332521\n",
+       "texas       695662  26448193\n",
+       "new york    141297  19651127\n",
+       "Florida     170312  19552860\n",
+       "Illinois    149995  12882135"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "area = pd.Series({'california': 423967, 'texas':695662, 'new york': 141297, 'Florida':170312,\n",
+    "                  'Illinois': 149995})\n",
+    "pop = pd.Series({'california': 38332521, 'texas':26448193, 'new york': 19651127, 'Florida':19552860,\n",
+    "                  'Illinois': 12882135})\n",
+    "data= pd.DataFrame({'area':area, 'pop':pop})\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "california    423967\n",
+      "texas         695662\n",
+      "new york      141297\n",
+      "Florida       170312\n",
+      "Illinois      149995\n",
+      "Name: area, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "data['area'] # = data.area 해도 됨 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area</th>\n",
+       "      <th>pop</th>\n",
+       "      <th>density</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>california</th>\n",
+       "      <td>423967</td>\n",
+       "      <td>38332521</td>\n",
+       "      <td>90.413926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>texas</th>\n",
+       "      <td>695662</td>\n",
+       "      <td>26448193</td>\n",
+       "      <td>38.018740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>new york</th>\n",
+       "      <td>141297</td>\n",
+       "      <td>19651127</td>\n",
+       "      <td>139.076746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Florida</th>\n",
+       "      <td>170312</td>\n",
+       "      <td>19552860</td>\n",
+       "      <td>114.806121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Illinois</th>\n",
+       "      <td>149995</td>\n",
+       "      <td>12882135</td>\n",
+       "      <td>85.883763</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              area       pop     density\n",
+       "california  423967  38332521   90.413926\n",
+       "texas       695662  26448193   38.018740\n",
+       "new york    141297  19651127  139.076746\n",
+       "Florida     170312  19552860  114.806121\n",
+       "Illinois    149995  12882135   85.883763"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['density'] = data['pop'] / data['area']\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>california</th>\n",
+       "      <th>texas</th>\n",
+       "      <th>new york</th>\n",
+       "      <th>Florida</th>\n",
+       "      <th>Illinois</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>area</th>\n",
+       "      <td>4.239670e+05</td>\n",
+       "      <td>6.956620e+05</td>\n",
+       "      <td>1.412970e+05</td>\n",
+       "      <td>1.703120e+05</td>\n",
+       "      <td>1.499950e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pop</th>\n",
+       "      <td>3.833252e+07</td>\n",
+       "      <td>2.644819e+07</td>\n",
+       "      <td>1.965113e+07</td>\n",
+       "      <td>1.955286e+07</td>\n",
+       "      <td>1.288214e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>density</th>\n",
+       "      <td>9.041393e+01</td>\n",
+       "      <td>3.801874e+01</td>\n",
+       "      <td>1.390767e+02</td>\n",
+       "      <td>1.148061e+02</td>\n",
+       "      <td>8.588376e+01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           california         texas      new york       Florida      Illinois\n",
+       "area     4.239670e+05  6.956620e+05  1.412970e+05  1.703120e+05  1.499950e+05\n",
+       "pop      3.833252e+07  2.644819e+07  1.965113e+07  1.955286e+07  1.288214e+07\n",
+       "density  9.041393e+01  3.801874e+01  1.390767e+02  1.148061e+02  8.588376e+01"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.values\n",
+    "data.T # trasnpose matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area</th>\n",
+       "      <th>pop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>california</th>\n",
+       "      <td>423967</td>\n",
+       "      <td>38332521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>texas</th>\n",
+       "      <td>695662</td>\n",
+       "      <td>26448193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>new york</th>\n",
+       "      <td>141297</td>\n",
+       "      <td>19651127</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              area       pop\n",
+       "california  423967  38332521\n",
+       "texas       695662  26448193\n",
+       "new york    141297  19651127"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[:3,:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pop</th>\n",
+       "      <th>area</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>new york</th>\n",
+       "      <td>19651127</td>\n",
+       "      <td>141297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Florida</th>\n",
+       "      <td>19552860</td>\n",
+       "      <td>170312</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               pop    area\n",
+       "new york  19651127  141297\n",
+       "Florida   19552860  170312"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.loc[data.density > 100, ['pop','area']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
