--- a/for Practice/practice_note.ipynb
+++ b/for Practice/practice_note.ipynb
@@ -1296,6 +1296,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 계층적 인덱스 (hierarchical indexing)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
