--- a/for Practice/practice_note.ipynb
+++ b/for Practice/practice_note.ipynb
@@ -1295,12 +1295,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 계층적 인덱스 (hierarchical indexing)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 계층적 인덱스 (hierarchical indexing)"
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(California, 2000)    33871648\n",
+       "(California, 2010)    37253956\n",
+       "(New York, 2000)      18976457\n",
+       "(New York, 2010)      19378102\n",
+       "(Texas, 2000)         20851820\n",
+       "(Texas, 2010)         25145561\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index = [('California', 2000), ('California', 2010),\n",
+    "         ('New York',2000), ('New York', 2010),\n",
+    "         ('Texas', 2000), ('Texas',2010)]\n",
+    "populations = [33871648, 37253956,\n",
+    "              18976457, 19378102,\n",
+    "              20851820, 25145561]\n",
+    "\n",
+    "pop = pd.Series(populations, index=index)\n",
+    "pop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(California, 2010)    37253956\n",
+       "(New York, 2000)      18976457\n",
+       "(New York, 2010)      19378102\n",
+       "(Texas, 2000)         20851820\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop[('California', 2010): ('Texas', 2000)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(California, 2010)    37253956\n",
+       "(New York, 2010)      19378102\n",
+       "(Texas, 2010)         25145561\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop[[i for i in pop.index if i[1] == 2010]] # 이런식으로 munging  그닥 비효율 대용량 처리시.\n"
    ]
   },
   {
