--- a/for Practice/practice_note.ipynb
+++ b/for Practice/practice_note.ipynb
@@ -1775,6 +1775,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 정렬되어 있지 않은 인덱스"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "char  int\n",
+       "a     1      0.415588\n",
+       "      2      0.389171\n",
+       "c     1      0.638825\n",
+       "      2      0.995046\n",
+       "b     1      0.694244\n",
+       "      2      0.793305\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index = pd.MultiIndex.from_product([['a','c','b'], [1,2]])\n",
+    "data = pd.Series(np.random.rand(6), index=index)\n",
+    "data.index.names = ['char','int']\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.errors.UnsortedIndexError'>\n",
+      "'Key length (1) was greater than MultiIndex lexsort depth (0)'\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    data['a':'b']\n",
+    "except KeyError as e:\n",
+    "    print(type(e))\n",
+    "    print(e) \n",
+    "    # 에러 먹고 빠져나옴. 왜냐면 위에 data는 인덱스가 a,c,b인데, data['a':'b']는 a,b로 되니까"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
