--- a/for Practice/practice_note.ipynb
+++ b/for Practice/practice_note.ipynb
@@ -1836,6 +1836,276 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "char  int\n",
+       "a     1      0.415588\n",
+       "      2      0.389171\n",
+       "b     1      0.694244\n",
+       "      2      0.793305\n",
+       "c     1      0.638825\n",
+       "      2      0.995046\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 정렬하기\n",
+    "\n",
+    "data = data.sort_index()\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "char  int\n",
+       "a     1      0.415588\n",
+       "      2      0.389171\n",
+       "b     1      0.694244\n",
+       "      2      0.793305\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['a':'b']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "state       year\n",
+      "California  2000    33871648\n",
+      "            2010    37253956\n",
+      "New York    2000    18976457\n",
+      "            2010    19378102\n",
+      "Texas       2000    20851820\n",
+      "            2010    25145561\n",
+      "dtype: int64 \n",
+      "\n",
+      "year            2000      2010\n",
+      "state                         \n",
+      "California  33871648  37253956\n",
+      "New York    18976457  19378102\n",
+      "Texas       20851820  25145561 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pop, '\\n')\n",
+    "print(pop.unstack(),'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th>year</th>\n",
+       "      <th>population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>California</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>33871648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>California</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>37253956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>New York</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>18976457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>New York</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>19378102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Texas</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>20851820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Texas</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>25145561</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        state  year  population\n",
+       "0  California  2000    33871648\n",
+       "1  California  2010    37253956\n",
+       "2    New York  2000    18976457\n",
+       "3    New York  2010    19378102\n",
+       "4       Texas  2000    20851820\n",
+       "5       Texas  2010    25145561"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## index labeL을 열로 나열\n",
+    "\n",
+    "pop_flat = pop.reset_index(name='population')\n",
+    "pop_flat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>population</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>state</th>\n",
+       "      <th>year</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">California</th>\n",
+       "      <th>2000</th>\n",
+       "      <td>33871648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>37253956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">New York</th>\n",
+       "      <th>2000</th>\n",
+       "      <td>18976457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>19378102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Texas</th>\n",
+       "      <th>2000</th>\n",
+       "      <td>20851820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>25145561</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 population\n",
+       "state      year            \n",
+       "California 2000    33871648\n",
+       "           2010    37253956\n",
+       "New York   2000    18976457\n",
+       "           2010    19378102\n",
+       "Texas      2000    20851820\n",
+       "           2010    25145561"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 위와 같은 원시 데이터를 multiindex로!\n",
+    "\n",
+    "pop_flat.set_index(['state','year']) # state / year 을 index로 "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
